# video_probe

./: .pubignore  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/video_probe/: VideoProbePlugin.kt
android/src/test/kotlin/com/example/video_probe/: VideoProbePluginTest.kt
darwin/: video_probe.podspec
darwin/Classes/: VideoProbePlugin.swift  video_probe.c  video_probe.h  video_probe_avfoundation.swift
docker/: Dockerfile  build-and-test.sh  docker-compose.yml
example/: README.md  pubspec.yaml
example/integration_test/: android_integration_test.dart  linux_integration_test.dart  plugin_integration_test.dart  web_integration_test.dart  windows_integration_test.dart
example/lib/: main.dart  platform_helper_io.dart  platform_helper_stub.dart  platform_helper_web.dart
ios/: video_probe.podspec
lib/: video_probe.dart  video_probe_bindings_generated.dart  video_probe_ffi.dart  video_probe_ffi_stub.dart  video_probe_method_channel.dart  video_probe_platform_interface.dart  video_probe_web.dart
linux/: CMakeLists.txt  video_probe_plugin.cc  video_probe_plugin_private.h
macos/: video_probe.podspec
src/: video_probe.c  video_probe.h  video_probe_android.c  video_probe_linux.c  video_probe_windows.cpp
test/: video_probe_method_channel_test.dart  video_probe_test.dart  video_probe_web_test.dart
windows/: CMakeLists.txt  video_probe_plugin.cpp  video_probe_plugin.h  video_probe_plugin_c_api.cpp
(+30 files in other folders)
